syntax = "proto3";

package kv;

service KeyValue {
    rpc GetValues (GetValuesRequest) returns (GetValuesResponse) {}
    // rpc SetValue(SetValueRequest) returns (SetValueResponse) {}
}

message SetValueRequest {
    string key = 1;
    string value = 2;
}

message SetValueResponse {
    bool success = 1;
}

message GetValuesRequest {
    string key = 1;
}

message GetValuesResponse {
    string value = 1;
}